--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/lightGrey"
+        android:orientation="vertical"
         tools:context=".MainActivity">
-        <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/imageView"/>
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="625dp"
+            android:layout_gravity="center"
+            android:id="@+id/imageView"/>
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
+            android:layout_height="match_parent">
+
         <LinearLayout
                 android:orientation="horizontal"
                 android:layout_gravity="bottom"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="100dp">
             <Button
                     android:text="back"
                     android:layout_gravity="bottom"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:id="@+id/back_button"
-                    android:layout_weight="1"/>
-            <Button
-                    android:text="move"
-                    android:layout_gravity="bottom"
+                    android:background="@color/green"
+                    android:textColor="@color/grey"
+                    android:layout_weight="1" android:includeFontPadding="false" android:textStyle="bold"/>
+
+            <FrameLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/move_button"
-                    android:layout_weight="1"/>
+                    android:layout_gravity="bottom"
+                    android:layout_height="100dp"
+                    android:layout_weight="1">
+
+                <Button
+                        android:text="move"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:background="@color/purple"
+                        android:textColor="@color/grey"
+                        android:id="@+id/move_button" android:textStyle="bold"/>
+                <Button
+                        android:text="stop"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:background="@color/orange"
+                        android:textColor="@color/grey"
+                        android:id="@+id/stop_button" android:textStyle="bold"/>
+
+            </FrameLayout>
+
             <Button
                     android:text="next"
                     android:layout_gravity="bottom"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:id="@+id/next_button"
-                    android:layout_weight="1"/>
+                    android:background="@color/pink"
+                    android:textColor="@color/grey"
+                    android:layout_weight="1" android:textStyle="bold"/>
         </LinearLayout>
-</FrameLayout>
+    </FrameLayout>
+</LinearLayout>
